k8s/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
  namespace: savannah-assess
  labels:
    app: django-app
spec:
  type: ClusterIP
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
      name: http
  selector:
    app: django-app
---
apiVersion: v1
kind: Service
metadata:
  name: django-app-nodeport
  namespace: savannah-assess
  labels:
    app: django-app
spec:
  type: NodePort
  ports:
    - port: 8888
      targetPort: 8888
      nodePort: 30800
      protocol: TCP
      name: http
  selector:
    app: django-app
